# YP-Sprint-9-MandelbrotFractal

./: CMakeLists.txt  README.md  conanfile.py
.devcontainer/: Dockerfile  devcontainer.json
include/: mandelbrot.hpp  mandelbrot_fractal_utils.hpp  mandelbrot_renderer.hpp  mandelbrot_sender.hpp  sfml_events_handler.hpp  sfml_renderer.hpp  types.hpp
src/: main.cpp
tests/: mandelbrot_renderer_test.cpp  mandelbrot_sender_test.cpp  mandelbrot_test.cpp  sfml_events_handler_test.cpp  sfml_renderer_test.cpp
